--- a/NanoProd/crab/crab_test.yaml
+++ b/NanoProd/crab/crab_test.yaml
@@ -1,10 +1,10 @@
 config:
   params:
-    era: Run2_2018
-    sampleType: data
+    era: Run2_2017
+    sampleType: mc
     storeFailed: false
     maxEvents: 100
     customiseCmds: "process.Timing = cms.Service('Timing', summaryOnly=cms.untracked.bool(True)); process.SimpleMemoryCheck = cms.Service('SimpleMemoryCheck', jobReportOutputOnly=cms.untracked.bool(True)); process.CPU = cms.Service('CPU')"
   dryrun: true
 
-SingleMuon_2018D: /SingleMuon/Run2018D-UL2018_MiniAODv2_GT36-v1/MINIAOD
+HNL_M-1_V-0.112_mu: local:/eos/user/a/amascell/HNL/output/Run2_2017/HeavyNeutrino_trilepton_M-1_V-0.112_mu_massiveAndCKM_LO
